RESOLVED FIXED148397
DFG::FixupPhase should use the lambda form of m_graph.doToChildren() rather than the old macro
https://bugs.webkit.org/show_bug.cgi?id=148397
Summary DFG::FixupPhase should use the lambda form of m_graph.doToChildren() rather t...
Filip Pizlo
Reported 2015-08-24 14:38:07 PDT
Patch forthcoming.
Attachments
the patch (14.26 KB, patch)
2015-08-24 14:40 PDT, Filip Pizlo
ggaren: review+
Filip Pizlo
Comment 1 2015-08-24 14:40:12 PDT
Created attachment 259777 [details] the patch
Geoffrey Garen
Comment 2 2015-08-24 14:41:52 PDT
Comment on attachment 259777 [details] the patch r=me
WebKit Commit Bot
Comment 3 2015-08-24 14:43:28 PDT
Attachment 259777 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:2123: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/JavaScriptCore/dfg/DFGFixupPhase.cpp:2176: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Filip Pizlo
Comment 4 2015-08-24 14:45:13 PDT
Note You need to log in before you can comment on or make changes to this bug.